--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,18 +5,19 @@
   text-align: center;
 }
 
+
 /* ------- Sign In Form Styling ---------*/
-.signin {
+.signin, .signup {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 60vh;
+  height: 80vh;
   border-radius: 20px;
   width: 100%;
 
 }
-/* -------Header Styling ---------*/
+/* -------Sign in Page Header Styling ---------*/
 .signin h1 {
   color: #000;
 text-align: center;
@@ -29,8 +30,9 @@ letter-spacing: -0.05rem;
 width: 28.88969rem;
 }
 
-.signinlingo {
-  color: #BABABA;
+/* -------Sign in Page Subheader Styling -----*/
+.signinlingo, .signuplingo {
+  color: #9D9D9D;
   text-align: center;
   font-family: Mazzard;
   font-size: 1rem;
@@ -39,6 +41,7 @@ width: 28.88969rem;
   line-height: 135%; /* 1.35rem */
   letter-spacing: -0.04rem;
   width: 26.4375rem;
+  margin-bottom: 15px;
 }
 
 /* -------Login Button Styling ---------*/
@@ -58,6 +61,10 @@ width: 28.88969rem;
   line-height: 100%; /* 1rem */
   letter-spacing: -0.01rem;
 }
+.login:hover {
+  background-color: #3D3D3D;
+  border: solid 1px #3D3D3D;
+}
 
 /* -------Signup Button Styling ---------*/
 .signup {
@@ -76,6 +83,11 @@ width: 28.88969rem;
  font-weight: 600;
  line-height: 100%; /* 1rem */
  letter-spacing: -0.01rem;
+}
+.signup:hover {
+  background-color: #3D3D3D;
+  border: solid 1px #3D3D3D;
+  color: white;
 }
 
 /* -------Forgot password styling ---------*/
@@ -114,6 +126,9 @@ width: 28.88969rem;
 .forgotPassword::after {
   right: -60px;
 }
+.forgotPassword:hover {
+  color: #E7E7E7;
+}
 
 /* ------- Password Input Box Styling ---------*/
 .password {
@@ -126,17 +141,18 @@ width: 28.88969rem;
   padding-left: 40px;
   padding-right: 20px;
   margin-top: 15px;
+  margin-bottom: 15px;
   box-sizing: border-box;
   font-family: Mazzard;
   font-size: 1rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 450;
   line-height: 100%; /* 1rem */
   letter-spacing: -0.01rem;
 }
 
 /* ------- Email Input Box Styling ---------*/
-.emailaddress {
+.emailaddress, .fullname {
   width: 20.87244rem;
   height: 4.17519rem;
   flex-shrink: 0;
@@ -150,8 +166,34 @@ width: 28.88969rem;
   font-family: Mazzard;
   font-size: 1rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 450;
   line-height: 100%; /* 1rem */
   letter-spacing: -0.01rem;
 }
 
+/* ------- Library Logo Styling ---------*/
+.librarylogo {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 34.6875rem;
+  height: 20.625rem;
+  flex-shrink: 0;
+  fill: rgba(203, 203, 203, 0.20);
+  z-index: -1;
+}
+
+/* ------- Library Logo Styling ---------*/
+.youXfavicon {
+  width: 7.5rem;
+  height: 7.5rem;
+  flex-shrink: 0;
+  fill: rgba(203, 203, 203, 0.20);
+  padding-top: 90px;
+}
+
+
+
+.Library {
+  color: pink;
+}
